# token-flash-sale

./: Cargo.toml  README.md
idl/: token_flash_sale.json
src/: close_sale.rs  get_token.rs  init_flash_sale.rs  lib.rs  utils.rs
