[package]
name = "token_flash_sale"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_flash_sale"

[dependencies]
pinocchio = "*"
shank = "*"
pinocchio-token = "*"
pinocchio-associated-token-account = "*"
pinocchio-pubkey = "*"
pinocchio-system = "*"
spl-token-2022 = {version = "9.0.0", features=["no-entrypoint"]}
solana-program = "2.3.0"
